# static-globals

./: .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  build_python_wheel_docker.sh  build_python_wheel_local.sh  mypy.ini  setup.cfg  setup.py.in
.github/workflows/: lint-python.yaml  test-cpp.yaml  test-python.yaml
python_src/test/: globalize_test.py
src/: CMakeLists.txt  GlobalStaticMaker.cpp  GlobalStaticMaker.h
src/tool/: CMakeLists.txt  MakeGlobalsStatic.cpp
test/: CMakeLists.txt  static_global_test.cpp  test_tool.cpp
